Fixed spacing issue on the button

--- a/PingComingSoon/styles/main.css
+++ b/PingComingSoon/styles/main.css
@@ -188,6 +188,7 @@ footer a {
   }
   input[type="email"] {
     width: 67%;
+    margin-right: 0.5rem;
     margin-bottom: 0.5rem;
   }
   button {
